Mod: Fix vertical align bug.

--- a/XiaoWei/Task09/css/index.css
+++ b/XiaoWei/Task09/css/index.css
@@ -317,6 +317,7 @@ select.font12 {
     text-align: left;
     margin-right: 0;
     width: 130px;
+    padding: 0;
 }
 
 .history > div:last-child >* {
